# audiobook-generator

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.sh
notebooks/: generate_audiobook.ipynb
